--- a/portfolio.html
+++ b/portfolio.html
@@ -5,15 +5,18 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <body style="background-color: #ff3300;">
+  <body style="background-color:#daf2e3;">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <div class="name" style="height:2000px; left: 740px;">
+    <div class="name" style="height:2000px; left: 0px;">
 
       WORK
 
     </div>
+
+    <img src="Untitled-1-02.gif" style="height: 200px; right:0px; top:700px; position:fixed;">
+
 
     <div class="sidebar">
       <a href="links.html">links</a>
@@ -23,6 +26,62 @@
       <a href="index.html">home</a>
 
     </div>
+
+    <div style="margin-left:480px; margin-top: 100px;">
+
+    <img src="PORTFOLLIOimage-01.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-02.png" style="width:65%;padding: 5px;">
+    <img src="PORTFOLLIOimage-03.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-04.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-05.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-06.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-07.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-08.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-09.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-10.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-11.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-12.png" style="width:65%;  padding: 5px;">
+
+    <img src="PORTFOLLIOimage-13.png" style="width:65%;  left:20%; padding: 5px;">
+    <img src="PORTFOLLIOimage-14.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-15.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-16.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-17.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-18.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-19.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-20.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-21.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-22.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-23.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-24.png" style="width:65%;  padding: 5px;">
+
+    <img src="PORTFOLLIOimage-25.png" style="width:65%;  left:20%; padding: 5px;">
+    <img src="PORTFOLLIOimage-26.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-27.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-28.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-29.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-30.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-31.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-32.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-33.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-34.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-35.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-36.png" style="width:65%;  padding: 5px;">
+
+    <img src="PORTFOLLIOimage-37.png" style="width:65%;  left:20%; padding: 5px;">
+    <img src="PORTFOLLIOimage-38.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-39.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-40.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-41.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-42.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-43.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-44.png" style="width:65%; padding: 5px;">
+    <img src="PORTFOLLIOimage-45.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-46.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-47.png" style="width:65%;  padding: 5px;">
+    <img src="PORTFOLLIOimage-48.png" style="width:65%;  padding: 5px;">
+
+</div>
 
 
   </body>
